refactor: more conversions to use signals

--- a/src/app/common/dialog/configurable-dialog/configurable-dialog.component.html
+++ b/src/app/common/dialog/configurable-dialog/configurable-dialog.component.html
@@ -1,7 +1,8 @@
 <asy-modal
 	[title]="data.title"
-	[cancelText]="data.cancelText"
+	[cancelText]="data.cancelText ?? 'Cancel'"
 	[disableOk]="!modalForm.form.valid"
+	[hideCancel]="data.hideCancel ?? false"
 	[okText]="data.okText"
 	(cancel)="cancel()"
 	(ok)="ok()"
