--- a/src/app/common/table/columns/ago-date/ago-date-column.component.html
+++ b/src/app/common/table/columns/ago-date/ago-date-column.component.html
@@ -1,12 +1,12 @@
-<ng-container cdkColumnDef [sticky]="sticky" [stickyEnd]="stickyEnd">
-	<th asy-sort-header cdk-header-cell *cdkHeaderCellDef [sortable]="sortable">
+<ng-container cdkColumnDef [sticky]="sticky()" [stickyEnd]="stickyEnd()">
+	<th asy-sort-header cdk-header-cell *cdkHeaderCellDef [sortable]="sortable()">
 		<ng-template #defaultHeaderTemplate>
-			{{ header ?? (name | titlecase) }}
+			{{ header() ?? (name | titlecase) }}
 		</ng-template>
 		<ng-template
-			[ngTemplateOutlet]="headerTemplate || defaultHeaderTemplate"
+			[ngTemplateOutlet]="headerTemplate ?? defaultHeaderTemplate"
 			[ngTemplateOutletContext]="{
-				header: header
+				header: header()
 			}"
 		>
 		</ng-template>
