--- a/src/app/core/admin/cache-entries/cache-entry-modal/cache-entry-modal.component.html
+++ b/src/app/core/admin/cache-entries/cache-entry-modal/cache-entry-modal.component.html
@@ -1,10 +1,4 @@
-<asy-modal
-	title="Cache Entry Details"
-	cancelText=""
-	okText="Close"
-	(cancel)="close()"
-	(ok)="close()"
->
+<asy-modal title="Cache Entry Details" hideCancel okText="Close" (cancel)="close()" (ok)="close()">
 	<div class="row">
 		<div class="col-md-12">
 			<label>Key</label>
