--- a/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
+++ b/src/app/core/audit/audit-view-change-modal/audit-view-change-modal.component.html
@@ -2,7 +2,7 @@
 	title="Changes to {{ auditEntry?.audit?.auditType }} by {{
 		auditEntry?.audit?.actor?.username
 	}} on {{ auditEntry?.created | utcDate }}"
-	cancelText=""
+	hideCancel
 	okText="Close"
 	(cancel)="close()"
 	(ok)="close()"
