--- a/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.html
+++ b/src/app/common/table/columns/expandable-list/asy-expandable-list-column.component.html
@@ -1,12 +1,12 @@
-<ng-container cdkColumnDef [sticky]="sticky" [stickyEnd]="stickyEnd">
+<ng-container cdkColumnDef [sticky]="sticky()" [stickyEnd]="stickyEnd()">
 	<th cdk-header-cell *cdkHeaderCellDef>
 		<ng-template #defaultHeaderTemplate>
-			{{ header ?? (name | titlecase) }}
+			{{ header() ?? (name | titlecase) }}
 		</ng-template>
 		<ng-template
-			[ngTemplateOutlet]="headerTemplate || defaultHeaderTemplate"
+			[ngTemplateOutlet]="headerTemplate ?? defaultHeaderTemplate"
 			[ngTemplateOutletContext]="{
-				header: header
+				header: header()
 			}"
 		>
 		</ng-template>
@@ -26,7 +26,7 @@
 								{{ listItem }}
 							</ng-template>
 							<ng-template
-								[ngTemplateOutlet]="itemTemplate || defaultItemTemplate"
+								[ngTemplateOutlet]="itemTemplate ?? defaultItemTemplate"
 								[ngTemplateOutletContext]="{
 									listItem: listItem,
 									item: item,
