various minor updates/fix from downstream

--- a/src/app/common/table/columns/text/text-column.component.html
+++ b/src/app/common/table/columns/text/text-column.component.html
@@ -12,6 +12,6 @@
 		</ng-template>
 	</th>
 	<td class="text-nowrap" cdk-cell *cdkCellDef="let obj">
-		{{ obj[name] }}
+		{{ obj[name] || defaultValue() }}
 	</td>
 </ng-container>
