--- a/src/app/common/table/columns/expander/asy-expander-column.component.html
+++ b/src/app/common/table/columns/expander/asy-expander-column.component.html
@@ -4,7 +4,7 @@
 		@if (isExpandable()(index, item)) {
 			<div style="cursor: pointer" (click)="toggle(index, item)">
 				<span
-					class="fa-solid fa-2x fa-angle-down"
+					class="fa-solid fa-lg fa-angle-down"
 					[class.fa-flip-vertical]="isExpanded(index, item)"
 				></span>
 			</div>
