refactor: misc updates
* replace ngOnChange input monitoring with signals
* replace remaining auth directive usages with @if

--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -26,4 +26,6 @@
 	}
 </footer>
 
-<app-feedback-flyout *isAuthenticated="true; and: showFeedbackFlyout()"></app-feedback-flyout>
+@if (isAuthenticated() && showFeedbackFlyout()) {
+	<app-feedback-flyout />
+}
